test/classes/nilability/nilability-bang-failure.good
nilability-bang-failure.chpl:8: In function 'main':
nilability-bang-failure.chpl:14: error: applying postfix-! to nil
nilability-bang-failure.chpl:9: note: 'nbq' is set to nil here
nilability-bang-failure.chpl:19: error: applying postfix-! to nil
nilability-bang-failure.chpl:10: note: 'nuq' is set to nil here
